adjusting code to work in parallel the new prepared properties